--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,6 @@ body {
     width: 100%;
     height: 100%
   }
+
+  #app { width: 100vw; height: 100vh; display: block; }
+  #play-sound-btn { position: absolute; top: 20px; left: 20px; z-index: 10; }
